--- a/orders-client/src/app/components/orders-table/orders-table.component.html
+++ b/orders-client/src/app/components/orders-table/orders-table.component.html
@@ -1,1 +1,41 @@
-<p>orders-table works!</p>
+<table mat-table [dataSource]="orders">
+
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <td mat-cell *matCellDef="let order">{{ order.date | date}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let order">{{ order?.client.name }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="phone">
+    <th mat-header-cell *matHeaderCellDef>Phone</th>
+    <td mat-cell *matCellDef="let order">{{ order?.client.phone }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Email</th>
+    <td mat-cell *matCellDef="let order">{{ order?.client.email }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="total-value">
+    <th mat-header-cell *matHeaderCellDef>Total Value</th>
+    <td mat-cell *matCellDef="let order">{{ order.totalValue | currency }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef class="actions"></th>
+    <td mat-cell *matCellDef="let order" class="actions">
+      <button mat-icon-button matTooltip="Show full order" (click)="showFullOrderClick(order)">
+        <mat-icon>receipt</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="columns"></tr>
+  <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+
+</table>
