--- a/orders-client/src/app/components/orders-details/orders-details.component.html
+++ b/orders-client/src/app/components/orders-details/orders-details.component.html
@@ -1,1 +1,43 @@
-<p>orders-details works!</p>
+<h1 mat-dialog-title>Order Details</h1>
+<div mat-dialog-content>
+  <div class="client-details">
+    <span>Client Name: <b>{{ order.client?.name }}</b></span>
+    <span>Phone: <b>{{ order.client?.phone }}</b></span>
+    <span>E-mail: <b>{{ order.client?.email }}</b></span>
+  </div>
+
+  <table mat-table [dataSource]="order.items">
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <td mat-cell *matCellDef="let item">{{ item.description }}</td>
+      <td mat-footer-cell *matFooterCellDef><strong class="total">Total</strong></td>
+    </ng-container>
+
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef>Quantity</th>
+      <td mat-cell *matCellDef="let item">{{ item.quantity }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef>Unit Price</th>
+      <td mat-cell *matCellDef="let item">{{ item.price | currency }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="total">
+      <th mat-header-cell *matHeaderCellDef>Total</th>
+      <td mat-cell *matCellDef="let item">{{ item.total | currency }}</td>
+      <td mat-footer-cell *matFooterCellDef>{{ order.totalValue | currency }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columns"></tr>
+    <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+    <tr mat-footer-row *matFooterRowDef="columns"></tr>
+  </table>
+
+</div>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Close</button>
+</mat-dialog-actions>
