feat: add populate
populate automatically adds freshy pizzas and hamburgers

--- a/orders-client/src/app/app.component.html
+++ b/orders-client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Order List</h1>
+<button class="populate" mat-raised-button (click)="populate()">Populate with data</button>
 
 <app-orders-search></app-orders-search>
 
