--- a/orders-client/src/app/components/orders-table/orders-table.component.html
+++ b/orders-client/src/app/components/orders-table/orders-table.component.html
@@ -39,3 +39,5 @@
   <tr mat-row *matRowDef="let row; columns: columns;"></tr>
 
 </table>
+
+<p *ngIf="orders?.length === 0" class="no-data">Looks like you don't have any order! Try clicking at "Populate with data"</p>
